# simple-wasm

./: Cargo.toml  README.md
site/: index.html  index.js  package.json  webpack.config.js
src/: lib.rs
