[package]
name = "simple-wasm"
version = "0.1.0"
authors = ["andy.bell@displaynote.com"]
edition = "2018"
description = "Some simple WASM Rust testing"
licence = "MIT/Apache-2.0"
repository = "https://github.com/andyjsbell/simple-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
